fixed mobile menu buttons spacing

--- a/src/components/frames/Modal.module.css
+++ b/src/components/frames/Modal.module.css
@@ -35,7 +35,7 @@
 
 .modal-card > p,
 .modal-card > button {
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 .modal-card > p {
@@ -53,7 +53,6 @@
 .mobile-menu {
   grid-template-columns: unset;
   place-items: center;
-  row-gap: 2rem;
 }
 
 @media only screen and (max-width: 380px) {
